fix: add div to allow canvas and main-content overlap and scalability

--- a/public/styles/canvas.css
+++ b/public/styles/canvas.css
@@ -8,5 +8,9 @@ canvas {
     51%,
     rgba(1,30,44,1) 67%
   );
-  position: absolute;
+  /* position: inherit; */
+  /* top: 5%; */
+  display: block;
+  height: 100%;
+  width: 100%;
 }
