--- a/public/styles/containers.css
+++ b/public/styles/containers.css
@@ -1,7 +1,11 @@
 .body-container {
-  min-height: 90vh;
-  padding: 0rem;
-  margin: 0rem;
+  min-height: auto;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .header-container, .footer-container {
@@ -18,6 +22,20 @@
   flex-direction: row;
   justify-content: space-around;
   width: 90% !important;
+}
+
+.canvas-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.main-content-container {
+  position: relative;
+  width: 100%;
+  height: auto;
 }
 
 .main-content {
@@ -37,7 +55,7 @@
 .carousel-container {
   display: flex;
   flex-direction: row;
-  height: max-content;
+  height: 100%;
   justify-content: center;
   gap: 10px;
 }
